# monty

./: CMakeLists.txt  add_node.c  addition.c  charprint.c  division.c  exchange.c  executer.c  free_stack.c  main.c  modul.c  monty.h  multiply.c  nor.c  package-lock.json  pall.c  pint.c  pop.c  push.c  queue.c  rotate_left.c  rotate_right.c  stack.c  strprint.c  subtraction.c
